# testgclient

./: .gclinet  .gn  BUILD.gn  DEPS
build_overrides/: build.gni  build_overrides.gni
scripts/: build-linux.py  build.py  build_linux.py  prepare_dev.py
src/: BUILD.gn
src/sdk/base/: fotricwebrtc.cpp  framegenerator.cpp  framegenerator.h  otterobserver.cpp  otterobserver.h  p2psocketsignalingchannel.cpp  p2psocketsignalingchannel.h  videoencode.cpp  videoencode.h
src/sdk/include/: fotricwebrtc.h
src/testing/: testing.gni
src/testing/test_gn/: test_gn.cpp
src/testing/test_shared_library/: testshared.cpp  testshared.h
src/testing/test_using_library/: test_using_library.cpp
